[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netucs"
version = "1.0.0"
description = "Network UDP Client Server data exchange - asynchronous client/server UDP communication"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Fabrizio Pollastri", email = "f.pollastri@inrim.it"},
]
keywords = ["udp", "client", "server", "asyncio", "network", "communication", "data-exchange"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/f-pollastri/netucs"
"Bug Reports" = "https://github.com/f-pollastri/netucs/issues"
"Source" = "https://github.com/f-pollastri/netucs"

[tool.setuptools]
packages = ["netucs"]
